bar chart progress

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="panel-heading">
             <h3 class="panel-title">Demographic Info</h3>
           </div>
-          <div id="sample-metadata" class="panel-body"></div>
+          <div id="sample-metadata" class="panel-body"></div> <!-- em[pty div for demographic] -->
         </div>
       </div>
       <div class="col-md-5">
@@ -50,8 +50,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="./static/js/app.js"></script> <!-- looks in the current directory by using ./ -->
   <!-- <script src="./static/js/bonus.js"></script> -->
-  <!-- <script src="samples.json"></script> -->
-    
+      
 </body>
 
 </html>
